fix: image forced width and container overflow

--- a/assets/scss/components/_project.scss
+++ b/assets/scss/components/_project.scss
@@ -2,7 +2,6 @@
   @include grid-structure($columns: 3, $col: $col-landscape, $padding: 0);
   &__image {
     width: 100%;
-    grid-column: 1 / 2;
   }
 
   &__info {
@@ -15,8 +14,16 @@
     }
 
     img {
-      width: 100%;
+      max-width: 100%;
       margin-top: ($col-landscape * 0.5);
+    }
+
+    table {
+      margin-bottom: ($col-landscape * 0.5);
+
+      em {
+        font-size: .75em;
+      }
     }
   }
 
@@ -83,6 +90,11 @@
     &__info {
       grid-column: 1 / 3;
       margin: 0;
+    }
+
+    &__image {
+      grid-column: 1 / 3;
+      width: 100%;
     }
 
     &__gallery {
