--- a/assets/scss/pages/_portafolio.scss
+++ b/assets/scss/pages/_portafolio.scss
@@ -18,44 +18,47 @@
   color: white;
 }
 
-
 .categories {
   @include grid-structure($columns: 3, $col: $col-landscape, $padding: 1);
   gap: 1rem;
 
-  .project-item {
+  .overlay {
+    display: flex;
     position: relative;
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      background-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.8),
+        transparent
+      );
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   .hidden {
     visibility: hidden;
   }
-  
-  .overlay {
-    position: absolute;
-    inset: 0;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
-    display: flex;
-    align-items: flex-end;
-  }
-  
+
   .overlay-text {
-    color: #fff;
+    position: absolute;
+    color: white;
+    align-self: flex-end;
     font-weight: bold;
-    padding: 1rem;
+    padding: 0.5rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-  }
-
-  .project-item > img {
-    width: 21rem;
-    // height: 10rem;
-  }
-
-  .overlay-text {
-    width: 100%;
-    // height: 10rem;
   }
 
   &__items {
@@ -100,8 +103,10 @@
       }
     }
 
-    .project-item > img {
-      width: 21rem;
+    .overlay {
+      h3 {
+        margin: ($col-landscape * (0.75));
+      }
     }
 
     &__title {
@@ -129,12 +134,6 @@
   .categories {
     @include grid-structure($columns: 2, $col: $col-landscape);
 
-    .project-item > img {
-      width: 19rem !important;
-      min-height: 14.4rem;
-    }
-
-
     &__internal {
       @include grid-structure($columns: 3, $col: $col-landscape);
       > div {
@@ -160,16 +159,6 @@
 
   .categories {
     @include grid-structure($columns: 2, $col: $col-portrait-tablet);
-
-    .project-item > img {
-      width: 23rem;
-      height: 16rem;
-    }
-
-    .overlay {
-      width: 23rem;
-      height: 16rem;
-    }
 
     &__items {
       &:nth-child(even) {
@@ -203,17 +192,6 @@
   .categories {
     @include grid-structure($columns: 4, $col: $col-landscape);
   }
-
-  .project-item > img {
-    // width: 10rem;
-    width: 16rem;
-    height: 10rem;
-  }
-
-  .overlay {
-    width: 16rem;
-    height: 10rem;
-  }
 }
 
 /*----------------------------------- Desktop 1280px -------------------------------*/
@@ -225,17 +203,6 @@
       margin-bottom: $col-landscape * 0.25;
       grid-column: auto;
     }
-
-    .project-item > img {
-      // width: 10rem;
-      width: 18rem;
-      height: 12rem;
-    }
-  
-    .overlay {
-      width: 18rem;
-      height: 12rem;
-    }
   }
 }
 
@@ -246,17 +213,6 @@
     &__items {
       margin-bottom: $col-landscape * 0.25;
       grid-column: auto;
-    }
-
-    .project-item > img {
-      // width: 10rem;
-      width: 27rem;
-      height: 16rem;
-    }
-  
-    .overlay {
-      width: 27rem;
-      height: 16rem;
     }
   }
 }
